# routes/goal.js
@@ -9,6 +9,7 @@ const {
 	getUserGoalsByDate,
 	pairGoals,
 	getIndustrySectors,
+	backDateGoal,
 } = require('../controller/goal_controller');
 
 const {authenticateToken, checkIfUserIsAdmin} = require('../middleware/auth');
@@ -17,6 +18,8 @@ const {authenticateToken, checkIfUserIsAdmin} = require('../middleware/auth');
 router.route('/').post(authenticateToken, createGoal);
 
 router.route('/industry-sector').get(authenticateToken, getIndustrySectors);
+
+router.route('/back-date').put(authenticateToken, checkIfUserIsAdmin, backDateGoal);
 
 // Get user goals with pagination
 router.route('/').get(authenticateToken, getUserGoals);
